# aws-marketplace-robomaker-tutorial

./: .gitmodules  README.md
controller_ws/: .gitignore  cross_compile.sh  ps3joy.py.patch
controller_ws/src/intdash_edge_raspi/: CMakeLists.txt  package.xml
controller_ws/src/intdash_edge_wrapper/: README.md
controller_ws/src/launcher/: CMakeLists.txt  package.xml
controller_ws/src/ps3joy_reader/: CMakeLists.txt  package.xml
script/: add_gpg_key.sh  secrets.conf  setup_intdash_bridge.sh  setup_intdash_edge.sh  setup_secrets.py
script/deploy/: aws_resource.yaml  create_application.py  create_resource.py  cross_compile_controller.sh  cross_compile_turtlebot3.sh  delete_resource.py  deployment.py  setup_intdash_controller.sh  setup_intdash_turtlebot3.sh
script/simulation/: aws_resource.yaml  create_application.py  create_resource.py  create_simulation_job.py  delete_resource.py  setup_intdash_rviz.sh  setup_intdash_turtlebot3.sh  x86_64_build.sh
turtlebot3_teleop_robot_ws/: .gitignore  cross_compile.sh
turtlebot3_teleop_robot_ws/src/cmd_vel_stopper/: CMakeLists.txt  package.xml
turtlebot3_teleop_robot_ws/src/converter/: CMakeLists.txt  package.xml
turtlebot3_teleop_robot_ws/src/intdash_edge/: CMakeLists.txt
turtlebot3_teleop_robot_ws/src/intdash_edge_wrapper/: CMakeLists.txt  package.xml  setup.py
turtlebot3_teleop_robot_ws/src/jpeghook_cpp/: CMakeLists.txt  package.xml
turtlebot3_teleop_simulation_ws/: .gitignore  .gitmodules  no_gazebo.sh  open_manipulator_with_tb3.patch  open_manipulator_with_tb3_simulations.patch  setup_manipulation.launch
(+76 files in other folders)
